*Empty MediaWiki Message*

--- a/Grunnegse_plaknoamen.mw
+++ b/Grunnegse_plaknoamen.mw
@@ -295,7 +295,9 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Zieldiekster
 |}
 
-== Veurm. gemainte Beem ==
+== Gemainte t Hoogelaand ==
+
+=== Veurm. gemainte Beem ===
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
 ! width="15%" |Grunnegs
@@ -351,7 +353,7 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Zuudwôlster
 |}
 
-== Veurm. gemainte Emsmond/ Emslaand ==
+=== Veurm. gemainte Emsmond/ Emslaand ===
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
 ! width="15%" |Grunnegs
@@ -485,6 +487,309 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Zeuvenhoezen
 |Zevenhuizen
 |Zeuvenhoezer
+|}
+
+=== Veurm. gemainte Marne ===
+{| {{prettytable}} width="60%"
+|- style="background: #efefef;"
+! width="15%" |Grunnegs
+! width="15%" |Nederlaands
+! width="15%" |Ienwoner
+|-
+|Bökkum
+|Bokum 
+|Bökkemer
+|-
+|Brouk
+|Broek 
+|Broukster
+|-
+|Daauwen
+|Douwen
+|Daauwender
+|-
+|Ainrom
+|Eenrum 
+|Ainrommer
+|-
+|Aiwerd
+|Ewer 
+|Aiwerder
+|-
+|Griesloot
+|Grijssloot 
+|Grieslootster
+|-
+|Groot Moarslag
+|Groot Maarslag 
+|Groot Moarslagster
+|-
+|Hörnhoezen
+|Hornhuizen 
+|Hörnhoezer
+|-
+|Haauwerziel
+|Houwerzijl 
+|Haauwerzielster
+|-
+|Koakhörn
+|Kaakhorn
+|Koakhörnster
+|-
+|Lutje Hoeskes
+|Kleine Huisjes 
+|Lutje Hoesker
+|-
+|Lutje Moarslag
+|Klein Maarslag 
+|Lutje Moarslagster
+|-
+|Kloosterboeren
+|Kloosterburen 
+|Kloosterboerster
+|-
+|Kroesweeg
+|Kruisweg 
+|Kroesweegster
+|-
+|Laauwersoog
+|Lauwersoog 
+|Laauwersooger
+|-
+|Lains
+|Leens
+|Lainster 
+|-
+|Mìnskeweer
+|Mensingeweer 
+|Mìnskeweer
+|-
+|Meulenrieg
+|Molenrij 
+|Meulenriegster
+|-
+|Nijkìrk
+|Niekerk 
+|Nijkìrkster
+|-
+|Oldendiek
+|Oudedijk 
+|Oldendiekster
+|-
+|Paiterboeren
+|Pieterburen 
+|Paiderboerster
+|-
+|Rodehoan
+|Roodehaan
+|Rodehoanster
+|-
+|Schaauwerziel
+|Schouwerzijl
+|Schaauwerzielster
+|-
+|Stört
+|Stort 
+|Störter
+|-
+|Ollerom
+|Ulrum 
+|Ollerommer
+|-
+|Vaaierhoezen
+|Vierhuizen
+|Vaaierhoezer
+|-
+|Vledörp
+|Vliedorp
+|Vledörpster 
+|-
+|Waarfhoezen
+|Warfhuizen 
+|Waarfhoezer
+|-
+|Wij
+|Wehe-den Hoorn 
+|Wijmer, Wijster
+|-
+|Nijlaand
+|Westernieland 
+|Nijlaanster
+|-
+|Wierhoezen
+|Wierhuizen
+|Wierhoezer
+|-
+|Zoltkamp
+|Zoutkamp
+|Zoltkamper
+|-
+|Zoerdiek
+|Zuurdijk
+|Zoerdiekster
+|}
+
+=== Veurm. gemainte Wìnzum ===
+{| {{prettytable}} width="60%"
+|- style="background: #efefef;"
+! width="15%" |Grunnegs
+! width="15%" |Nederlaands
+|-
+|Abbeweer
+|Abbeweer
+|-
+|Oadörp
+|Adorp
+|-
+|Auwerderziel
+|Aduarderzijl 
+|-
+|Allenhoezen
+|Alinghuizen
+|-
+|Allersma
+|Allersma
+|-
+|Antam
+|Antum 
+|-
+|Aarwerd
+|Arwerd 
+|-
+|Bavvelt
+|Baflo
+|-
+|Bellenweer
+|Bellingeweer 
+|-
+|Beeswerd
+|Beswerd 
+|-
+|Bolshoezen
+|Bolshuizen 
+|-
+|Dingum
+|De Dingen 
+|-
+|n Aandel
+|Den Andel 
+|-
+|Duusterwinkel
+|Duisterwinkel 
+|-
+|Eernsum
+|Ernstheem 
+|-
+|Aizen
+|Ezinge 
+|-
+|Fiwwerd
+|Feerwerd 
+|-
+|Garnwerd
+|Garnwerd 
+|-
+|Groot Wetsen
+|Groot Wetsinge
+|-
+|Hammelaand
+|Hammeland
+|-
+|Haardeweer 
+|Hardeweer
+|-
+|Hazzens
+|Harssens
+|-
+|Hekkum
+|Hekkum
+|-
+|t Schoor
+|Het Schoor
+|-
+|Hiddenziel
+|Hiddingezijl
+|-
+|Lutke Garnwerd
+|Klein Garnwerd
+|-
+|Lutke Wetsen
+|Klein Wetsinge 
+|-
+|Krassum
+|Krassum
+|-
+|Lutke Marne
+|Lutje Marne 
+|-
+|Lutke Soaksum
+|Lutje Saaksum
+|-
+|Moarhoezen
+|Maarhuizen
+|-
+|Obergum
+|Obergum
+|-
+|Oldenziel
+|Oldenzijl 
+|-
+|Oostum
+|Oostum 
+|-
+|De Roaken
+|De Raken
+|-
+|Roanum 
+|Ranum
+|-
+|Raskert
+|Rasquert
+|-
+|Soaksumhoezen
+|Saaxumhuizen
+|-
+|Saauwerd
+|Sauwerd
+|-
+|Schaphaals
+|Schapehals
+|-
+|Schaphaalsterziel
+|Schaphalsterzijl
+|-
+|De Schifpot
+|Schifpot
+|-
+|Schillegeham
+|Schilligeham 
+|-
+|Stuttum
+|Suttum
+|-
+|Toekenbosk
+|Takkebos
+|-
+|Tium
+|Tijum
+|-
+|Tinaaln
+|Tinallinge
+|-
+|Vaalkum
+|Valkum 
+|-
+|De Vennen
+|De Vennen
+|-
+|Wierum
+|Wierum
+|-
+|Wierummerschaauw
+|Wierumerschouw 
+|-
+|t Wildvèld
+|'t Wildeveld
 |}
 
 == Veurm. gemainte Grotegast ==
@@ -782,146 +1087,6 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Zeuvenhuzen
 |Zevenhuizen
 |Zeuvenhuzener
-|}
-
-== Veurm. gemainte Marne ==
-{| {{prettytable}} width="60%"
-|- style="background: #efefef;"
-! width="15%" |Grunnegs
-! width="15%" |Nederlaands
-! width="15%" |Ienwoner
-|-
-|Bökkum
-|Bokum 
-|Bökkemer
-|-
-|Brouk
-|Broek 
-|Broukster
-|-
-|Daauwen
-|Douwen
-|Daauwender
-|-
-|Ainrom
-|Eenrum 
-|Ainrommer
-|-
-|Aiwerd
-|Ewer 
-|Aiwerder
-|-
-|Griesloot
-|Grijssloot 
-|Grieslootster
-|-
-|Groot Moarslag
-|Groot Maarslag 
-|Groot Moarslagster
-|-
-|Hörnhoezen
-|Hornhuizen 
-|Hörnhoezer
-|-
-|Haauwerziel
-|Houwerzijl 
-|Haauwerzielster
-|-
-|Koakhörn
-|Kaakhorn
-|Koakhörnster
-|-
-|Lutje Hoeskes
-|Kleine Huisjes 
-|Lutje Hoesker
-|-
-|Lutje Moarslag
-|Klein Maarslag 
-|Lutje Moarslagster
-|-
-|Kloosterboeren
-|Kloosterburen 
-|Kloosterboerster
-|-
-|Kroesweeg
-|Kruisweg 
-|Kroesweegster
-|-
-|Laauwersoog
-|Lauwersoog 
-|Laauwersooger
-|-
-|Lains
-|Leens
-|Lainster 
-|-
-|Mìnskeweer
-|Mensingeweer 
-|Mìnskeweer
-|-
-|Meulenrieg
-|Molenrij 
-|Meulenriegster
-|-
-|Nijkìrk
-|Niekerk 
-|Nijkìrkster
-|-
-|Oldendiek
-|Oudedijk 
-|Oldendiekster
-|-
-|Paiterboeren
-|Pieterburen 
-|Paiderboerster
-|-
-|Rodehoan
-|Roodehaan
-|Rodehoanster
-|-
-|Schaauwerziel
-|Schouwerzijl
-|Schaauwerzielster
-|-
-|Stört
-|Stort 
-|Störter
-|-
-|Ollerom
-|Ulrum 
-|Ollerommer
-|-
-|Vaaierhoezen
-|Vierhuizen
-|Vaaierhoezer
-|-
-|Vledörp
-|Vliedorp
-|Vledörpster 
-|-
-|Waarfhoezen
-|Warfhuizen 
-|Waarfhoezer
-|-
-|Wij
-|Wehe-den Hoorn 
-|Wijmer, Wijster
-|-
-|Nijlaand
-|Westernieland 
-|Nijlaanster
-|-
-|Wierhoezen
-|Wierhuizen
-|Wierhoezer
-|-
-|Zoltkamp
-|Zoutkamp
-|Zoltkamper
-|-
-|Zoerdiek
-|Zuurdijk
-|Zoerdiekster
 |}
 
 == Gemainte Midden-Grunnen ==
@@ -1733,169 +1898,6 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Zuudvèld
 |Zuidveld
 |
-|}
-
-== Veurm. gemainte Wìnzum ==
-{| {{prettytable}} width="60%"
-|- style="background: #efefef;"
-! width="15%" |Grunnegs
-! width="15%" |Nederlaands
-|-
-|Abbeweer
-|Abbeweer
-|-
-|Oadörp
-|Adorp
-|-
-|Auwerderziel
-|Aduarderzijl 
-|-
-|Allenhoezen
-|Alinghuizen
-|-
-|Allersma
-|Allersma
-|-
-|Antam
-|Antum 
-|-
-|Aarwerd
-|Arwerd 
-|-
-|Bavvelt
-|Baflo
-|-
-|Bellenweer
-|Bellingeweer 
-|-
-|Beeswerd
-|Beswerd 
-|-
-|Bolshoezen
-|Bolshuizen 
-|-
-|Dingum
-|De Dingen 
-|-
-|n Aandel
-|Den Andel 
-|-
-|Duusterwinkel
-|Duisterwinkel 
-|-
-|Eernsum
-|Ernstheem 
-|-
-|Aizen
-|Ezinge 
-|-
-|Fiwwerd
-|Feerwerd 
-|-
-|Garnwerd
-|Garnwerd 
-|-
-|Groot Wetsen
-|Groot Wetsinge
-|-
-|Hammelaand
-|Hammeland
-|-
-|Haardeweer 
-|Hardeweer
-|-
-|Hazzens
-|Harssens
-|-
-|Hekkum
-|Hekkum
-|-
-|t Schoor
-|Het Schoor
-|-
-|Hiddenziel
-|Hiddingezijl
-|-
-|Lutke Garnwerd
-|Klein Garnwerd
-|-
-|Lutke Wetsen
-|Klein Wetsinge 
-|-
-|Krassum
-|Krassum
-|-
-|Lutke Marne
-|Lutje Marne 
-|-
-|Lutke Soaksum
-|Lutje Saaksum
-|-
-|Moarhoezen
-|Maarhuizen
-|-
-|Obergum
-|Obergum
-|-
-|Oldenziel
-|Oldenzijl 
-|-
-|Oostum
-|Oostum 
-|-
-|De Roaken
-|De Raken
-|-
-|Roanum 
-|Ranum
-|-
-|Raskert
-|Rasquert
-|-
-|Soaksumhoezen
-|Saaxumhuizen
-|-
-|Saauwerd
-|Sauwerd
-|-
-|Schaphaals
-|Schapehals
-|-
-|Schaphaalsterziel
-|Schaphalsterzijl
-|-
-|De Schifpot
-|Schifpot
-|-
-|Schillegeham
-|Schilligeham 
-|-
-|Stuttum
-|Suttum
-|-
-|Toekenbosk
-|Takkebos
-|-
-|Tium
-|Tijum
-|-
-|Tinaaln
-|Tinallinge
-|-
-|Vaalkum
-|Valkum 
-|-
-|De Vennen
-|De Vennen
-|-
-|Wierum
-|Wierum
-|-
-|Wierummerschaauw
-|Wierumerschouw 
-|-
-|t Wildvèld
-|'t Wildeveld
 |}
 
 == Veurm. gemainte Zuudhörn ==
