--- a/Grunnegse_plaknoamen.mw
+++ b/Grunnegse_plaknoamen.mw
@@ -1548,6 +1548,68 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Zuidwending
 |}
 
+== Gemainte Westerkertier ==
+
+=== Veurm. gemainte Grotegast ===
+{| {{prettytable}} width="60%"
+|- style="background: #efefef;"
+! width="15%" |Grunnegs
+! width="15%" |Nederlaands
+! width="15%" |Ienwoner
+|-
+|Doezum
+|Doezum
+|Doezumer
+|-
+|t Voan
+|Faan 
+|Voanster
+|-
+|Grotegast
+|Grootegast
+|Grotegaster
+|-
+|Kornhörn
+|Kornhorn
+|Kornhörnster
+|-
+|Kuzum
+|Kuzemer
+|Kuzumer
+|- 
+|Kuzumerbaalk
+|Kuzemerbalk
+|Kuzumerbaalkster
+|-
+|Lutjegast 
+|Lutjegast 
+|Lutjegaster
+|-
+|Nijkìrk
+|Niekerk
+|Nijkìrkster
+|-
+|Olkìrk
+|Oldekerk 
+|Olkìrkster
+|-
+|De Penne
+|Opende 
+|Penster
+|-
+|Pijbosk
+|Peebos
+|Pijbosker
+|-
+|Seballeboeren
+|Sebaldeburen 
+|Seballeboerster
+|-
+|De Snipperij
+|De Snipperij
+|Snippijster
+|}
+
 == Gemainte Westerwolde ==
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
