/* Veurm. gemainte Hoaren */

--- a/Grunnegse_plaknoamen.mw
+++ b/Grunnegse_plaknoamen.mw
@@ -856,7 +856,7 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Vaaierverloatster
 |}
 
-== Veurm. gemainte Hoaren ==
+=== Veurm. gemainte Hoaren ===
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
 ! width="15%" |Grunnegs
