--- a/Grunnegse_plaknoamen.mw
+++ b/Grunnegse_plaknoamen.mw
@@ -892,6 +892,58 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Potterwôlster
 |}
 
+=== Veurm. gemainte Tin Boer ===
+{| {{prettytable}} width="60%"
+|- style="background: #efefef;"
+! width="15%" |Grunnegs
+! width="15%" |Nederlaands
+! width="15%" |Ienwoner
+|-
+|Taisner Hammerk
+|Achter-Thesinge
+|Taisner Hammerkster 
+|-
+|Gaarmerwôlde
+|Garmerwolde
+|Gaarmerwôlster
+|-
+|Kröddeboeren
+|Kröddeburen 
+|Kröddeboerster
+|-
+|Lellens
+|Lellens
+|Lellenster
+|-
+|Lutje Auwerd, Sunt Anne
+|Sint-Annen 
+|Lutje Auwerder
+|-
+|Tin Boer
+|Ten Boer
+|Boerster
+|-
+|Tin Post
+|Ten Post 
+|Poster
+|-
+|Taisn
+|Thesinge
+|Taisner
+|-
+|Winneweer
+|Winneweer 
+|Winneweerster
+|-
+|Wittewierum
+|Wittewierum 
+|Wittewierumer
+|-
+|Woltersom
+|Woltersum
+|Woltersommer
+|}
+
 == Gemainte Knoal ==
 '''Let op:''' Ceresdörp wordt ien t Grunnegs mit n C schreven, omreden dit n noam van n Reumse godin is.
 {| {{prettytable}} width="60%"
