--- a/Grunnegse_plaknoamen.mw
+++ b/Grunnegse_plaknoamen.mw
@@ -1510,6 +1510,46 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 
 == Gemainte Westerkertier ==
 
+=== Veurm. gemainte De Lieke ===
+{| {{prettytable}} width="60%"
+|- style="background: #efefef;"
+! width="15%" |Grunnegs
+! width="15%" |Nederlaands
+! width="15%" |Ienwoner
+|-
+|Daipswaal
+|Diepswal 
+|Daipswaalster
+|-
+|Aimentil
+|Enumatil
+|Aimentilster
+|-
+|Lepterd
+|Lettelbert 
+|Lepterder
+|-
+|De Lieke, Leek
+|Leek
+|Liekster, Leekster
+|-
+|Midwôlde
+|Midwolde
+|Midwôlster
+|-
+|Oostwôld
+|Oostwold
+|Oostwôlster
+|-
+|Tolbert
+|Tolbert 
+|Tolberder
+|-
+|Zeuvenhuzen
+|Zevenhuizen
+|Zeuvenhuzener
+|}
+
 === Veurm. gemainte Grotegast ===
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
