--- a/Grunnegse_plaknoamen.mw
+++ b/Grunnegse_plaknoamen.mw
@@ -1570,6 +1570,46 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Snippijster
 |}
 
+=== Veurm. gemainte Moarum ===
+{| {{prettytable}} width="60%"
+|- style="background: #efefef;"
+! width="15%" |Grunnegs
+! width="15%" |Nederlaands
+! width="15%" |Ienwoner
+|-
+|Boerakker
+|Boerakker 
+|Boerakkerder
+|-
+|Jonkersvoart
+|Jonkersvaart 
+|Jonkersvoarder
+|-
+|Luukswôlde
+|Lucaswolde
+|Luukswôlster
+|-
+|Moarum
+|Marum
+|Moarumer
+|-
+|(De) Nijbert
+|Niebert 
+|Nijberder
+|-
+|Noordwiek
+|Noordwijk 
+|Noordwiekster
+|-
+|Nuus
+|Nuis 
+|Nuuster
+|-
+|De Wilp
+|De Wilp
+|Wilpster
+|}
+
 == Gemainte Westerwolde ==
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
