--- a/Grunnegse_plaknoamen.mw
+++ b/Grunnegse_plaknoamen.mw
@@ -1610,6 +1610,157 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Wilpster
 |}
 
+=== Veurm. gemainte Zuudhörn ===
+{| {{prettytable}} width="60%"
+|- style="background: #efefef;"
+! width="15%" |Grunnegs
+! width="15%" |Nederlaands
+|-
+|Aalsum
+|Aalsum 
+|-
+|Auwerd
+|Aduard 
+|-
+|Baalmhoezen
+|Balmahuizen
+|-
+|Baarnwerd
+|Barnwerd
+|-
+|Briltil
+|Briltil
+|-
+|De Kampen
+|De Kampen
+|-
+|De Povvert
+|De Poffert
+|-
+|De Roegwoard
+|De Ruigewaard 
+|-
+|n Ham
+|Den Ham
+|-
+|n Hörn
+|Den Horn
+|-
+|Daipswaal
+|Diepswal
+|-
+|Elektra
+|Electra 
+|-
+|Englum
+|Englum
+|-
+|Fraansum
+|Fransum 
+|-
+|Fritum
+|Frytum 
+|-
+|Gaaikemadiek
+|Gaaikemadijk 
+|-
+|Gaaikemaweer
+|Gaaikemaweer 
+|-
+|Gaarkeuken
+|Gaarkeuken
+|-
+|Gruupskìrk
+|Grijpskerk
+|-
+|Hereburen
+|Heereburen
+|-
+|t Hörnke
+|'t Hoekje
+|-
+|Hoogmeden 
+|Hoogemeeden
+|-
+|Ikum
+|Ikum 
+|-
+|Kenwerd
+|Kenwerd 
+|-
+|Kievitsburen
+|Kievitsburen
+|-
+|Kommerziel
+|Kommerzijl 
+|-
+|Korhörn
+|Korhorn 
+|-
+|Legemeden
+|Lagemeeden 
+|-
+|Lammerburen
+|Lammerburen
+|-
+|Laauwerziel
+|Lauwerzijl
+|-
+|Nijehoof
+|Niehove 
+|-
+|Nijklap
+|Nieuwklap
+|-
+|Nijziel
+|Niezijl
+|-
+|Noordburen
+|Noorderburen 
+|-
+|Noordhörn
+|Noordhorn
+|- 
+|Noordhörnergo
+|Noordhornerga 
+|-
+|Noordhörnertolhek 
+|Noordhornertolhek
+|-
+|Okswerd
+|Okswerd
+|-
+|Ollehoof
+|Oldehove
+|-
+|Pama
+|Pama
+|-
+|Pieterziel
+|Pieterzijl 
+|-
+|t Roegsaand
+|Ruigezand
+|-
+|Soaksum
+|Saaksum 
+|-
+|Selwerd
+|Selwerd
+|-
+|Spanjoardsdiek 
+|Spanjaardsdijk
+|-
+|Staintil 
+|Steentil 
+|-
+|Viskvliet
+|Visvliet
+|-
+|Wierummerschaauw
+|Wierumerschouw
+|}
+
 == Gemainte Westerwolde ==
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
