--- a/Grunnegse_plaknoamen.mw
+++ b/Grunnegse_plaknoamen.mw
@@ -1610,6 +1610,22 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Wilpster
 |}
 
+=== Veurm. gemainte Wìnzum ===
+{| {{prettytable}} width="60%"
+|- style="background: #efefef;"
+! width="15%" |Grunnegs
+! width="15%" |Nederlaands
+|-
+|Aizen
+|Ezinge 
+|-
+|Fiwwerd
+|Feerwerd 
+|-
+|Garnwerd
+|Garnwerd 
+|}
+
 === Veurm. gemainte Zuudhörn ===
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
