/* Veurm. gemainte Wìnzum */

--- a/Grunnegse_plaknoamen.mw
+++ b/Grunnegse_plaknoamen.mw
@@ -781,7 +781,7 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Zoerdiekster
 |}
 
-=== Veurm. gemainte Wìnzum ===
+=== Veurm. gemainte Wìnzum I ===
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
 ! width="15%" |Grunnegs
