--- a/Heks_Hasje.mw
+++ b/Heks_Hasje.mw
@@ -23,3 +23,4 @@ Messchein ... a'je up n duustere aovend of nacht eins op de Hassebaarg kiken gao
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Sage]]
+[[Kategorie:Westerwoolde (gemainte)]]
