--- a/Fraizenkuur.mw
+++ b/Fraizenkuur.mw
@@ -64,3 +64,5 @@ Over Amerikoa worden over d'hail wereld wel grappen môkt. Veuraal omdat Ameriko
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Humor]]
+[[Kategorie:Frieslaand]]
+[[Kategorie:Grunnen]]
