--- a/Middaglands.mw
+++ b/Middaglands.mw
@@ -9,6 +9,6 @@ Ien tegenstelleng tot de andere Westerkertierse dialekten ([[Zuud-Westerkertiers
 {{Dia|Schreven ien t [[Westerkertiers|Zuud-Westerkertiers]]}}
 
 [[Kategorie:Grunnegs artikel]]
-[[Kategorie:Grunnegs]]
+[[Kategorie:Grunnegs|*]]
 [[Kategorie:T Hoogelaand]]
 [[Kategorie:Westerkertier (gemainte)]]
