--- a/Middaglands.mw
+++ b/Middaglands.mw
@@ -10,5 +10,5 @@ Ien tegenstelleng tot de andere Westerkertierse dialekten ([[Zuud-Westerkertiers
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Grunnegs|*]]
-[[Kategorie:T Hoogelaand]]
+[[Kategorie:Grunnen (gemainte)]]
 [[Kategorie:Westerkertier (gemainte)]]
