--- a/Köllumerlands.mw
+++ b/Köllumerlands.mw
@@ -28,4 +28,6 @@ t Köllumerlands is middelkerwies ontstoan doe t olle Köllumerland zok ien 15. 
 
 {{DEFAULTSORT:Kollumerlands}}
 [[Kategorie:Grunnegs artikel]]
-[[Kategorie:Nedersaksies]]
+[[Kategorie:Grunnegs|*]]
+[[Kategorie:Westerkertier (gemainte)]]
+[[Kategorie:Frieslaand]]
