--- a/Köllumerlands.mw
+++ b/Köllumerlands.mw
@@ -29,5 +29,5 @@ t Köllumerlands is middelkerwies ontstoan doe t olle Köllumerland zok ien 15. 
 {{DEFAULTSORT:Kollumerlands}}
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Grunnegs|*]]
+[[Kategorie:Streektaol in Frieslaand]]
 [[Kategorie:Westerkertier (gemainte)]]
-[[Kategorie:Frieslaand]]
