--- a/Stichting_t_Grunneger_Bouk.mw
+++ b/Stichting_t_Grunneger_Bouk.mw
@@ -10,3 +10,4 @@ Sunt 1985 langt t Grunneger Bouk de [[K. ter Laanpries|K. ter Laan-Pries]] oet a
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Nedersaksiese organisasie]]
 [[Kategorie:Nedersaksiese schrieveri'je]]
+[[Kategorie:Oldambt (gemainte)]]
