--- a/K._ter_Laanpries.mw
+++ b/K._ter_Laanpries.mw
@@ -40,3 +40,4 @@ De pries is nuimd noar de Grunneger schriever en politikus [[Kornelis ter Laan]]
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Kulturele priezen]]
+[[Kategorie:Grunnen]]
