/* Boetende hìnwiezen */ Kategorie

--- a/Kornelis_ter_Laan.mw
+++ b/Kornelis_ter_Laan.mw
@@ -75,3 +75,4 @@ Hieronder staait allend môr dat opnomen wat mit Grunnen of t Grunnegs te môken
 [[Kategorie:Grunnegs]]
 [[Kategorie:Schriever ien t Grunnegs]]
 [[Kategorie:Tweede Kamerlid]]
+[[Kategorie:Midden-Grunnen]]
