/* Uutgaonde verwiezings */ Kategorie

--- a/Törf_(band).mw
+++ b/Törf_(band).mw
@@ -59,3 +59,4 @@ Noast de eigen albums hef Törf bijedreugen an hiel wat albums van collega-muzik
 [[Kategorie:Drèents artikel]]
 [[Kategorie:Streektaolmuziek]]
 [[Kategorie:Nedersaksiese muziek]]
+[[Kategorie:Grunnen]]
