--- a/Golda_Meir.mw
+++ b/Golda_Meir.mw
@@ -29,4 +29,4 @@ In 1973 verscheen Meir heur autobiografie, ''Mien leven''. Ze kwaamp in 1978 uut
 
 {{DEFAULTSORT:Meir, Golda}}
 [[Kategorie:Drèents artikel]]
-[[Kategorie:Israëlische premier]]
+[[Kategorie:Premier van Israël]]
