--- a/Pulaar.mw
+++ b/Pulaar.mw
@@ -1,8 +1,8 @@
-Et ''pulaar'' of ''fula'' is ne [[taal|språke]] dee vöärnamelik döär de [[Fulbe]] in [[West-Afrika|Westafrika]] wördt espröäken en dee töt de [[Atlantische Congotalen|atlantiske kongospråken]] van de [[Niger-Congotalen|Niger-Kongospråken]] behöyrt. Et is en [[Dialectcontinuüm|språkkontinuum]] wårby spreakers van angrensende regios mekare makkelik verståt, mår nen spreaker uut Sudan hevt moide üm nen spreaker uut Senegal to verstån.
+Et ''pulaar'' of ''fula'' is ne [[taal|språke]] dee vöärnamelik döär de [[Fulbe]] in [[West-Afrika|Westafrika]] wördt espröäken. Et höyrt by de [[Atlantische Congotalen|atlantiske kongospråken]] van de [[Niger-Congotalen|Niger-Kongospråken]]. Et is en [[Dialectcontinuüm|språkkontinuum]] wårby spreakers van angrensende regios mekandere makkelik verståt, mår nen spreaker uut Sudan hevt moide üm nen spreaker uut Senegal to verstån.
 
-De name Fula wördt vöäral in engelskspråkige literatuur gebruked in nåvölging van den gelearde [[D.W. Arnott]] ümdat de term Fula makkeliker uut to spreaken is dan de westelike språknåme Pulaar en de oustelike språknåme Fulfulde. Dee naamgrense ligt in Mali.
+De name Fula wördt vöäral in engelske literatuur gebruked in nåvölging van den gelearde [[D.W. Arnott]] ümdat de term Fula makkeliker uut to spreaken is dan de westelike språknåme Pulaar en de oustelike språknåme Fulfulde. Dee naamgrense ligt in Mali.
 
-Et Fula wördt espröäken in twintig afrikaanske landen, van [[Senegal]], [[Mauritanie]], [[Gambia (land)|Gambia]] en [[Guinee]] töt in [[Kameroen|Kameroon]] en [[Soedan|Sudan]], wårskynlik bünt der ouk enklaves van spreakers in [[Ethiopië|Etiopie]]. Et is dårmed de wydstverspreide afrikaanske språke van Afrika. De språke wördt souwal in et [[Latijnse schrift|latynske skrivt]] as in et [[Arabisch schrift|arabisk skrivt]] eskreaven.
+Et Fula wördt espröäken in twintig afrikaanske landen, van [[Senegal]], [[Mauritanie]], [[Gambia (land)|Gambia]] en [[Guinee]] töt in [[Kameroen|Kameroon]] en [[Soedan|Sudan]], wårskynlik bünt der ouk grupen spreakers in [[Ethiopië|Etiopie]]. Et is dårmed de wydst verspreide afrikaanske språke van Afrika. De språke wördt souwal in et [[Latijnse schrift|latynske skrivt]] as in et [[Arabisch schrift|arabisk skrivt]] eskreaven.
 
 10 töt 16 miljoon lüde hebbet et Fula as moderspråke en dårnevven bünt der ouk noch vöäle lüde dee et as tweyde språke hebbet.
 
