*Empty MediaWiki Message*

--- a/Guinea-Bissau.mw
+++ b/Guinea-Bissau.mw
@@ -1,3 +1,24 @@
+{{Landtabel|nameinlandstaal=Guiné-Bissau<br>
+𞤘𞤭𞤲𞤫 𞤄𞤭𞤧𞤢𞥄𞤱𞤮 (Gine-Bisaawo)<br>
+ߖߌߣߍ ߺ ߓߌߛߊߥߏ߫ (Gine-Bisawo)|breyddegråd=11/52//N|landkode=GW|tld=gw|feystdag=24. september (Unafhangelikheidsdag)|tydzone=UTC (GMT)|valutakode=XOF|münteynheid=Westafrikaansken Frank|volksleed=Esta É a Nossa Pátria Bem Amada (''Dit is uns deep geleevde moderland'')|längdegråd=15/36//W|inwoaners=1.726.000|vlagge=Flag_of_Guinea-Bissau.svg|dichtheid=46,9|km2=36.125|pctwater=22,4|religy=46,1% [[Islam]]
+30,6% [[Volksgelöyv]]
+18,9% [[Kristendom]]
+4,4% Anders|regeringsform=Republik|höyvdstad=Bissau|talen=Portugeesk (officiääl)
+* Guinea-Bissausk Kreool
+* [[Engels]]k
+* [[Fransk]]
+* [[Arabisk]]
+* [[Balanta]]
+* [[Hassanisk arabisk]]
+*[[Jola-Fonyi]]
+*[[Mandinka]]
+*[[Mandjak]]
+*[[Mankanya]]
+*[[Noon]]
+*[[Pulaar]]
+*[[Serer]]
+*[[Soninke]]|lokaty=Location_Guinea_Bissau_AU_Africa.svg|wåpen=Emblem_of_Guinea-Bissau.svg|tel=+245}}
+
 '''Guinea-Bissau''' ([[Portugees|Portugeesk]]: ''Guiné-Bissau'', [[Pulaar|Fula]]: ''𞤘𞤭𞤲𞤫 𞤄𞤭𞤧𞤢𞥄𞤱𞤮 Gine-Bisaawo'', [[Mandinka]]: ߖߌߣߍ ߺ ߓߌߛߊߥߏ߫ ''Gine-Bisawo''), officiääl den '''Republik Guinea-Bissau''' (portugeesk: ''República da Guiné-Bissau'' [ʁɛˈpuβlikɐ ðɐ ɣiˈnɛ βiˈsaw]), is en land in [[West-Afrika|Westafrika]]. Up ne uppervlakde van 36.125 kilometer in et veerkant woanet der ungeväär 1.726.000 miljoon lüde. Et grenset an [[Senegal]] in et noorden en [[Guinea]] up et süüdousten.
 
 Guinea-Bissau was ooit deyl van et köäningryk [[Kaabu]] en ouk et [[Maliryk]]. Deylen van dit köäningryk hölden stand töt de [[18e eeuw|18. eywe]], terwyl as andere deylen al seyd de [[16e eeuw|16. eywe]] under portugeesk bewind völlen. In de [[19e eeuw|19. eywe]] wör et koloniseerd as Portugeesk Guinea. In [[1973]] verklården et land sikselv unafhangelik, wat in [[1974]] aksepteerd wör döär Portugal. De höyvdstad, [[Bissau]], wör by de name by anetrökken üm verwarring med et vöärmålige Fransk-Guinea te vöärkummen.
