*Empty MediaWiki Message*

--- a/Guinea-Bissau.mw
+++ b/Guinea-Bissau.mw
@@ -25,6 +25,6 @@ Guinea-Bissau was ooit deyl van et köäningryk [[Kaabu]] en ouk et [[Maliryk]].
 
 Seyd de unafhangelikheid steyt Guinea-Bissau bekend üm de wankele polityk. Mär eynen verköäsenen president ([[José Mário Vaz]]) hevt ne vulle ambtstyd van vyv jår vulemaked. Den hüdigen president, [[Umaro Sissoco Embaló]] is verköäsen up [[29 december|29. december]] [[2019]].
 
-De officiäle språke is portugeesk, al spreakt mär 2% van de lüde et as eyrste en 33% as tweyde språke. [[Guinea-bissausk Kreool]], baseerd up et portugeesk, is de verbindende språke in et land. Volgens en undersöök uut 2012 spreaket 54% van de bevolking et as eyrste en 40% as tweyde språke. De rest spreaket verskillende andere inheymske afrikaanske språken. De meyste inwoaners sint of [[Christendom|kristelik]] of [[Islam|islamitisk]]. Et BBP van et land is eyne van de laegste van de wearld.
+De officiäle språke is portugeesk, al spreakt mär 2% van de lüde et as eyrste en 33% as tweyde språke. [[Guinea-bissausk Kreool]], baseerd up et portugeesk, is de verbindende språke in et land. Volgens en undersöök uut 2012 spreaket 54% van de bevolking et as eyrste en 40% as tweyde språke. De rest spreaket verskillende andere inheymske afrikaanske språken. En grout deyl van de inwoaners sint [[Islam|islamitisk]], dårnå kummet verskeidene natuurgodsdeenste. Et kristendom hevt sou'n 18% anhang. Et BBP van et land is eyne van de laegste van de wearld.
 
 Guinea-Bissau is lid van de Vereynigde Natys, et Afrikaanske Verbund, de Ekonomiske Gemeynskap van Westafrikaanske Ståten, de Islamitiske Samenwarkingsband, et Portugeesk-spreakende Landgemeynskap, De Internationale Frankofone Samenwarking en de Süüdatlantiske Zone van Vreyde- en Samenwarking.
