Verwysing nå döärverwyssyde repareerd ([[Niger]] nå [[Niger (laand)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/West-Afrika.mw
+++ b/West-Afrika.mw
@@ -12,7 +12,7 @@ Lechtgreun: [[Maghreb]], Ne ofzeunderlike strekke.]]
 |-
 | [[Cape Verde]]|| [[Guinea]]|| [[Mauritanië]]|| [[Sierra Leone]]
 |-
-| [[Ivoorkuste]]|| [[Guinea-Bissau]] || [[Niger]]|| [[Togo]]
+| [[Ivoorkuste]]|| [[Guinea-Bissau]] || [[Niger (laand)|Niger]]|| [[Togo]]
 |}
 
 A'j t nauw bekiekt heurt de [[Kanariese Eiloandn|Kanariese Eilaandn]] dr ook bie, mer umdet dee bie [[Spanje]] bie an heurt, wordt ze meestal nit met ereknd. 
