--- a/Guinea-Bissau.mw
+++ b/Guinea-Bissau.mw
@@ -1,7 +1,5 @@
 {{Landtabel
-|nameinlandstaal=Guiné-Bissau<br>
-𞤘𞤭𞤲𞤫 𞤄𞤭𞤧𞤢𞥄𞤱𞤮 (Gine-Bisaawo)<br>
-ߖߌߣߍ ߺ ߓߌߛߊߥߏ߫ (Gine-Bisawo)
+|nameinlandstaal=Guiné-Bissau<br>𞤘𞤭𞤲𞤫 𞤄𞤭𞤧𞤢𞥄𞤱𞤮 (Gine-Bisaawo)<br>ߖߌߣߍ ߺ ߓߌߛߊߥߏ߫ (Gine-Bisawo)
 |breyddegråd=11/52//N
 |landkode=GW
 |tld=gw
