*Empty MediaWiki Message*

--- a/Spaans.mw
+++ b/Spaans.mw
@@ -1,3 +1,4 @@
+[[File:Hispanophone global world map language.svg|thumb]]
 '''Spaans''' (''español'') of '''Kastiliaans''' (''castellano'') is een [[Romaanse talen|Romaanse]] [[spraok|taol]] en de tweede taol van de wereld wat 't antal moedertaalpraoters anbelangt. Spaans wördt deur meer as 400 miljoen mèensen praot. De meesten daorvan leven in [[Latiens-Amerika]] en [[Spanje]]. 't [[Kattelaans|Catalaans]], 't [[Galicisch]] en 't [[Baskisk|Baskisch]] bint aparte taolen die in bepaolde dielen van Spanje "co-officieel" bin.
 
 == Verwaante taolen ==
