--- a/Grunnen_(provìnzie).mw
+++ b/Grunnen_(provìnzie).mw
@@ -142,40 +142,52 @@ De [[Provinzjoale Stoaten]] binnen veur t lèst kozen in 2015.
 |-
 |
 {| class="wikitable" style="float:left; margin-right:2em;"
-!colspan="9"| Uitslag Statenverkiezingen 2003, 2007, 2011 en 2015
+!colspan="11"| Uitslag Statenverkiezingen 2003, 2007, 2011, 2015 en 2019
 |-
-| valign=top rowspan=2 | '''Partei''' || colspan=2 align=center | '''2003''' || colspan=2 align=center | '''2007'''|| colspan=2 align=center | '''2011'''|| colspan=2 align=center | '''2015'''
+| valign=top rowspan=2 | '''Partei''' || colspan=2 align=center | '''2003''' || colspan=2 align=center | '''2007'''|| colspan=2 align=center | '''2011'''|| colspan=2 align=center | '''2015''' || colspan=2 align=center | '''2019'''
 |-
-| '''stemmen in %'''|| '''zetels''' || '''stemmen in %'''|| '''zetels'''|| '''stemmen in %'''|| '''zetels'''|| '''stemmen in %'''|| '''zetels'''
+| '''stemmen in %'''|| '''zetels''' || '''stemmen in %'''|| '''zetels'''|| '''stemmen in %'''|| '''zetels'''|| '''stemmen in %'''|| '''zetels''' || '''stemmen in %'''|| '''zetels'''
 |-
 | [[SP]] 
 | align=right | 6,0 || align=right | 3
 | align=right | 15,9 || align=right | 7
 | align=right | ... || align=right | 6
 | align=right | ... || align=right | 8
+| align=right | ... || align=right | 4
 |-
 | [[PvdA]]
 | align=right | 33,7 || align=right | 20
 | align=right | 26,2 || align=right | 12
 | align=right | ... || align=right | 12
 | align=right | ... || align=right | 6
+| align=right | ... || align=right | 5
+|-
+| [[FVD]]
+| align=right | ... || align=right | 
+| align=right | ... || align=right | 
+| align=right | ... || align=right | 
+| align=right | ... || align=right | 
+| align=right | ... || align=right | 5
 |-
 | [[CDA]] 
 | align=right | 20,9 || align=right | 12
 | align=right | 19,4 || align=right | 9
 | align=right | ... || align=right | 5
 | align=right | ... || align=right | 5
+| align=right | ... || align=right | 3
 |-
 | [[D66]]
 | align=right | 4,0 || align=right | 2
 | align=right | 2,6 || align=right | 1
 | align=right | ... || align=right | 3
 | align=right | ... || align=right | 4
+| align=right | ... || align=right | 3
 |-
 | [[VVD]] 
 | align=right | 13,4 || align=right | 7
 | align=right | 11,7 || align=right | 5
 | align=right | ... || align=right | 6
+| align=right | ... || align=right | 4
 | align=right | ... || align=right | 4
 |-
 | [[ChristenUnie]] (CU)
@@ -183,17 +195,20 @@ De [[Provinzjoale Stoaten]] binnen veur t lèst kozen in 2015.
 | align=right | 10,3 || align=right | 4
 | align=right | ... || align=right | 3
 | align=right | ... || align=right | 4
+| align=right | ... || align=right | 4
 |-
 | [[PVV]]
 | align=right | - || align=right | -
 | align=right | - || align=right | -
 | align=right | ... || align=right | 3
 | align=right | ... || align=right | 3
+| align=right | ... || align=right | 2
 |-
 | [[Groninger Belang]]
 | align=right | - || align=right | -
 | align=right | - || align=right | -
 | align=right | - || align=right | -
+| align=right | ... || align=right | 3
 | align=right | ... || align=right | 3
 |-
 | [[GroenLinks]] 
@@ -201,36 +216,42 @@ De [[Provinzjoale Stoaten]] binnen veur t lèst kozen in 2015.
 | align=right | 7,6 || align=right | 3
 | align=right | ... || align=right | 3
 | align=right | ... || align=right | 3
+| align=right | ... || align=right | 6
 |-
 | [[Partij voor de Dieren]]
 | align=right | - || align=right | -
 | align=right | 2,2 || align=right | 1
 | align=right | ... || align=right | 1
 | align=right | ... || align=right | 2
+| align=right | ... || align=right | 1
 |-
 | [[Partij voor het Noorden]] 
 | align=right | 4,0 || align=right | 2
 | align=right | 3,6 || align=right | 1
 | align=right | ... || align=right | 1
 | align=right | ... || align=right | 1
+| align=right | ... || align=right | 2
 |-
 | [[50Plus]]
 | align=right | - || align=right | -
 | align=right | - || align=right | -
 | align=right | ... || align=right | 0
 | align=right | ... || align=right | 0
+| align=right | ... || align=right | 1
 |-
 | [[Nieuwe Communistische Partij]]
 | align=right | 0,8 || align=right | 0
 | align=right | 0,5 || align=right | 0
 | align=right | - || align=right | -
 | align=right | - || align=right | -
+| align=right | ... || align=right | -
 |-
 | Opkomst 
 | align=right | ''55,5'' || align=right | ''55''
 | align=right | ''51,0'' || align=right | ''43''
 | align=right | ''58,2'' || align=right | ''43''
 | align=right | ''53,0'' || align=right | ''43''
+| align=right | ... || align=right | ''43''
 |-
 |}
 | width="50" |
