--- a/Grunnen_(provìnzie).mw
+++ b/Grunnen_(provìnzie).mw
@@ -251,7 +251,7 @@ De [[Provinzjoale Stoaten]] binnen veur t lèst kozen in 2019.
 | align=right | ''51,0'' || align=right | ''43''
 | align=right | ''58,2'' || align=right | ''43''
 | align=right | ''53,0'' || align=right | ''43''
-| align=right | ... || align=right | ''43''
+| align=right | ''56,1'' || align=right | ''43''
 |-
 |}
 | width="50" |
