--- a/Grunnen_(provìnzie).mw
+++ b/Grunnen_(provìnzie).mw
@@ -163,10 +163,10 @@ De [[Provinzjoale Stoaten]] binnen veur t lèst kozen in 2019.
 | align=right | ... || align=right | 5
 |-
 | [[FVD]]
-| align=right | ... || align=right | 
-| align=right | ... || align=right | 
-| align=right | ... || align=right | 
-| align=right | ... || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
 | align=right | ... || align=right | 5
 |-
 | [[ChristenUnie]] (CU)
@@ -244,7 +244,7 @@ De [[Provinzjoale Stoaten]] binnen veur t lèst kozen in 2019.
 | align=right | 0,5 || align=right | 0
 | align=right | - || align=right | -
 | align=right | - || align=right | -
-| align=right | ... || align=right | -
+| align=right |  || align=right | 
 |-
 | Opkomst 
 | align=right | ''55,5'' || align=right | ''55''
