--- a/Roman.mw
+++ b/Roman.mw
@@ -2,7 +2,7 @@
 Een '''roman''' is een eschreven of mangs espreuken verhaal in [[proza|prozavörm]], van langere aosem as beveurbield 't [[kört verhaal|körte verhaal]] en de [[novelle]]. 't Woord giet terogge op de term [[Romaanse talen|Romaans]] in de zin van de Gallo-Romaanse volkstaal die hum uut 't [[Latien]] ontwikkelde. Daoruut ontstund 't woord roman veur een verhaal esteld in 't Romaans.
 
 ==Kenmarken==
-Romans wördt op de markt ebracht in [[boek (literetuur)|boekvörm]], typisch mit een lengte van aover de honderd töt een paar honderd bladzieden. Sinds de 21ste ieuw wördt ze vake ok digitaal uutebracht, as [[e-boek]]. Hoe lang of een verhaal krek mut wezen um as roman te tellen, is gien mandielige opvatting aover. Vake wördt inholdelijke kenmarken bij de definitie betrökken: waor körte verhalen en novelles typisch aover ien personage of een beparkt antal personages gaot, en aover iene gebeurtenis of een beparkt antal gebeurtenissen, neigt romans dernaor bevolkt te wezen mit meer personages. Ok hebt ze een stoerder verhaal, det bestiet uut verscheiden gebeurtenissen die vake aover langere tied plaatseviendt. Dit bint algemiene kenmarken, waor ok zat uutzunderings op bestaot.
+Romans wördt op de markt ebracht in je vader[[boek (literetuur)|boekvörm]], typisch mit een lengte van aover de honderd töt een paar honderd bladzieden. Sinds de 21ste ieuw wördt ze vake ok digitaal uutebracht, as [[e-boek]]. Hoe lang of een verhaal krek mut wezen um as roman te tellen, is gien mandielige opvatting aover. Vake wördt inholdelijke kenmarken bij de definitie betrökken: waor körte verhalen en novelles typisch aover ien personage of een beparkt antal personages gaot, en aover iene gebeurtenis of een beparkt antal gebeurtenissen, neigt romans dernaor bevolkt te wezen mit meer personages. Ok hebt ze een stoerder verhaal, det bestiet uut verscheiden gebeurtenissen die vake aover langere tied plaatseviendt. Dit bint algemiene kenmarken, waor ok zat uutzunderings op bestaot.
 
 Romans kunt aover van alles gaon en der behoeft gien mèensen in veur te komen, mar typisch is der spraoke van ien of meerdere mèensen, heur belevenissen en de innerlijke ontwikkeling die ze deurmaakt in relatie töt heur umgeving. Deurgaons is der bij romans spraoke van [[fictie]]: 't bint kats verzunnen verhalen, of verhalen die (diels) ontliend bint an warkelijke gebeurtenissen en personen, die dan anepast bint umwille van 't verhaal.
 
