--- a/Johanna_ter_Steege.mw
+++ b/Johanna_ter_Steege.mw
@@ -1,7 +1,7 @@
 '''Johanna ter Steege''' ([[Nötter (Wierdn)|Nötter]], den [[10 mei|10. mei]] [[1961]]) is ne [[Twente|twentske]] [[akteur|aktrice]].
 
 ==Leavensloup==
-Ter Steede deade van [[1979]] töt [[1984]] studeren an de Akademy vöär Drama en Kunst in [[Kampen (Overiessel)|Kampen]]. Van [[1984]] töt [[1988]] güng he når dee toneelskole in [[Arnhem]]. Up de Akademy richteden he med een paar studenten de teatergrup De Trust van Theu Boermans up.
+Ter Steege deade van [[1979]] töt [[1984]] studeren an de Akademy vöär Drama en Kunst in [[Kampen (Overiessel)|Kampen]]. Van [[1984]] töt [[1988]] güng he når de toneelskole in [[Arnhem]]. Up de Akademy richteden he med een paar studenten de teatergrup De Trust van Theu Boermans up.
 
 In [[1987]] spöälden Ter Steege in de film ''Spoorloos'', under regy van George Sluizer. Vöär öär spöälewark kreag se de Felix Award ([[Berlyn]]) vöär beste stütrulle. Seyt dee tyd güng se de wearld oaver üm in meyrdere språken te akteren. Ter Steege warkeden med bekende regissöörs as Robert Altman (Vincent & Theo, [[1990]]), István Szabó (Sweet Emma, dear Bobe), Heddy Honigmann (Tot Ziens/Goodbye, beste aktrice in Locarno) en Bruce Beresford (Paradise Road, 1997). Ter Steege warkeden samen med aktöörs as [[Glenn Close]], [[Frances McDormand]], [[Isabella Rossellini]], [[Gary Oldman]], [[Tim Roth]] en [[Klaus Maria Brandauer]].
 
