Wysigingen döär [[Special:Contributions/2A02:A440:7E2F:1:4C0E:F90A:D2BA:6032|2A02:A440:7E2F:1:4C0E:F90A:D2BA:6032]] ([[User talk:2A02:A440:7E2F:1:4C0E:F90A:D2BA:6032|oaverleg]]) weaderümmedraid tot de lätste versy van [[User:Bdijkstra|Bdijkstra]]

--- a/Justin_Bieber.mw
+++ b/Justin_Bieber.mw
@@ -9,7 +9,7 @@
 | laand          = [[Kanada]]
 | webstee        = www.justinbiebermusic.com
 }}
-'''Justin Drew Bieber''' ([[1 maart|1 meart]], [[1994]]) is nen [[Kannede|Kanadesen]] [[popmuziek|pop]] en [[R&B]]-zanger, skriewer en [[akteur]].<ref>[http://www.billboard.com/artist/justin-bieber/bio/1099520 Billboard. Justin Bieber Biography & Awards] 2010-06-15</ref> Bieber learn zikzelf [[Drummer|drumn]], [[gitaar]]-, [[piano]]- en [[trompet]]spöln. Bieber wör oontdekt in [[2008]] duur Scooter Braun,<ref>[http://www.vancouverobserver.com/politics/news/2010/12/24/justin-bieber-makes-them-proud-why Konjicanin, A. Justin Bieber makes them proud. But why?] Vancouver Observer. 24 December 2010. Bekekn op 1 november 2011</ref>, den't Bieber's muziekvideo's op [[YouTube]] zaggen. Hee wör later zinnen manager. Braun zorgen at Bieber [[Usher]] tröf in [[Atlanta]], [[Georgia]], en Bieber har al rap n kontrakt te pakn bie [[Raymond Braun Media Group]] (RBMG), wat n vennootskop is tusken Usher en Braun,<ref>[http://www.billboard.com/news/justin-bieber-the-billboard-cover-story-1004074692.story#/news/justin-bieber-the-billboard-cover-story-1004074692.story Herrera, M. Justin Bieber – The Billboard Cover Story]. Billboard. 19 meart 2010. Bekekn op 7 mei 2010.</ref> en doarnoa met n opnemkontrakt met [[Island Records]], an eböadn duur [[L.A. Reid]].<ref>[http://www.billboard.com/bbcom/news/usher-introduces-teen-singer-justin-bieber-1003966989.story#/bbcom/news/usher-introduces-teen-singer-justin-bieber-1003966989.story Mitchell, G. Usher Introduces Teen Singer Justin Bieber] Billboard. 28 April 2009. Bekekn op 23 juli 2009.</ref> Bieber's eerste single, "One Time", wör vrie egeewn in 2009 en steund hoge in de top 10 in [[Kanada]]. t Steund ook in verskeaidene aandere internasjonale hitliestn hoge in de top 30. Zin eerste album, ''My World'', met zeuwn nummers, köm rap in november van t zelfde joar, en wör al gaauw ne [[Platina]]-plate in de [[Verenigde Stoaten]]. Hee wör n eerstn artiest met zeuwn nommers van n debuutalbum in de [[Billboard Hot 100]].<ref>[http://www.cbsnews.com/stories/2010/02/05/earlyshow/leisure/music/main6177327.shtml. CBS News Interactive. Justin Bieber Fever Hits Miami.] 5 februwoari 2010. bekekn op 27 meart 2010.</ref> 
+'''Justin Drew Bieber''' ([[1 meert|1 meart]], [[1994]]) is nen [[Kannede|Kanadesen]] [[popmuziek|pop]] en [[R&B]]-zanger, skriewer en [[akteur]].<ref>[http://www.billboard.com/artist/justin-bieber/bio/1099520 Billboard. Justin Bieber Biography & Awards] 2010-06-15</ref> Bieber learn zikzelf [[Drummer|drumn]], [[gitaar]]-, [[piano]]- en [[trompet]]spöln. Bieber wör oontdekt in [[2008]] duur Scooter Braun,<ref>[http://www.vancouverobserver.com/politics/news/2010/12/24/justin-bieber-makes-them-proud-why Konjicanin, A. Justin Bieber makes them proud. But why?] Vancouver Observer. 24 December 2010. Bekekn op 1 november 2011</ref>, den't Bieber's muziekvideo's op [[YouTube]] zaggen. Hee wör later zinnen manager. Braun zorgen at Bieber [[Usher]] tröf in [[Atlanta]], [[Georgia]], en Bieber har al rap n kontrakt te pakn bie [[Raymond Braun Media Group]] (RBMG), wat n vennootskop is tusken Usher en Braun,<ref>[http://www.billboard.com/news/justin-bieber-the-billboard-cover-story-1004074692.story#/news/justin-bieber-the-billboard-cover-story-1004074692.story Herrera, M. Justin Bieber – The Billboard Cover Story]. Billboard. 19 meart 2010. Bekekn op 7 mei 2010.</ref> en doarnoa met n opnemkontrakt met [[Island Records]], an eböadn duur [[L.A. Reid]].<ref>[http://www.billboard.com/bbcom/news/usher-introduces-teen-singer-justin-bieber-1003966989.story#/bbcom/news/usher-introduces-teen-singer-justin-bieber-1003966989.story Mitchell, G. Usher Introduces Teen Singer Justin Bieber] Billboard. 28 April 2009. Bekekn op 23 juli 2009.</ref> Bieber's eerste single, "One Time", wör vrie egeewn in 2009 en steund hoge in de top 10 in [[Kanada]]. t Steund ook in verskeaidene aandere internasjonale hitliestn hoge in de top 30. Zin eerste album, ''My World'', met zeuwn nummers, köm rap in november van t zelfde joar, en wör al gaauw ne [[Platina]]-plate in de [[Verenigde Stoaten]]. Hee wör n eerstn artiest met zeuwn nommers van n debuutalbum in de [[Billboard Hot 100]].<ref>[http://www.cbsnews.com/stories/2010/02/05/earlyshow/leisure/music/main6177327.shtml. CBS News Interactive. Justin Bieber Fever Hits Miami.] 5 februwoari 2010. bekekn op 27 meart 2010.</ref> 
 
 Meart 2010 köm Bieber met zin eerste lange studio album, ''My World 2.0''. t Köm in verskeaidene laandn meteen in de top 10 en wör ook platina in de VS. Doarop volgen de wearldwiede top-10 single ''Baby'', wat vandaag n dag t meestbekekn en -besprökn YouTube-filmken is.<ref>[http://www.readwriteweb.com/archives/top_10_youtube_videos_of_all_time.php Readwriteweb.com. Top 10 YouTube Videos of All Time.] 9 februwoari 2011. Bekekn op 24 februwoari 2011</ref> Meteen doarop köm he met nen konsertriege (de ''My world Tour''), de remixalbums ''My Worlds Acoustic'' en ''Never Say Never - The Remixes'', en de 3D biopies-konsertfilm ''Justin Bieber: Never Say Never'' - wat in t eerste wekneande ne opbrengst har wat kort an t rekord köm vuur best-bezochten konsertfilm. Zin tweede album, ''Under the Mistletoe'', gavn he oet in november 2011, wat op nommer 1 in de ''Billboard'' 200 hitlieste köm.
 
