*Empty MediaWiki Message*

--- a/A.L._Snijders.mw
+++ b/A.L._Snijders.mw
@@ -51,3 +51,6 @@ In 2021 küm A.L. Snijders in syn huus in Klein Dochteren uut de tyd. Hee wör 8
 * Het oog van de naald, 2018
 * Doelloos kijken, 2019
 * Tat Tvam Asi, 2021
+
+[[Kategorie: Tweants artikel]]
+[[Kategorie: Schriever]]
