--- a/Klein_Dochteren.mw
+++ b/Klein_Dochteren.mw
@@ -22,7 +22,7 @@
 Den geoloog [[Winand Carel Hugo Staring|Winand Staring]], zönne van den bekenden dichter [[Anthony Christiaan Winand Staring|A.C.W. Staring]], leet der in 1845 een groot landhoes voor zichzelf bouwen, ''De Boekhorst'', verneumd naor n old boerenarf met denzelfden name. De Boekhorst is vandage an den dag n [[rieksmonnument]] <ref>[http://monumentenregister.cultureelerfgoed.nl/php/main.php?cObject=Object&cAction=show&cOffset=0&cOBJnr=1011649&cLast=7&oField=OBJ_RIJKSNUMMER&oOrder=&sCompMonNr=&sCompMonName=&sStatus=&sHoofdcategorie=&sSubcategorie=&sFunctie=&sProvincie=Gelderland&sGemeente=Lochem&sPlaats=&sStraat=&sHuisnummer=&sPostcode=&sFunctie=&sHoofdcategorie=&sSubcategorie=&sOmschrijving=boekhorst&sMonNr=519302 Rieksmonnument Boekhorst]</ref> .
 
 ==Bekaende inwonners==
-* [[A.L. Snijders]] (1937), skriever
+* [[A.L. Snijders]] (1937-2021), skriever
 * [[Winand Carel Hugo Staring|Winand Staring]] (1808-1877), geoloog
 
 ==Oetstalling==
