[[:Kategorie:Schriever]] weg-ehaald; [[:Kategorie:Nederlaandse schriever]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/A.L._Snijders.mw
+++ b/A.L._Snijders.mw
@@ -52,5 +52,6 @@ In 2021 küm A.L. Snijders in syn huus in Klein Dochteren uut de tyd. Hee wör 8
 * Doelloos kijken, 2019
 * Tat Tvam Asi, 2021
 
+{{DEFAULTSORT:Snijders}}
 [[Kategorie: Tweants artikel]]
-[[Kategorie: Schriever]]
+[[Kategorie:Nederlaandse schriever]]
