--- a/Taylor_Swift.mw
+++ b/Taylor_Swift.mw
@@ -10,7 +10,7 @@
 | webstee        = 
 }}
 
-'''Taylor Alison Swift''' ([[13 december]] [[1989]]) is ne [[Vereynigde Ståten|amerikaanske]] sängeresse en leedkesskryvster. Öäre nummers gåt meysttyds oaver öär eygene leaven, wat öär vöäle mediaandacht upleyverden. Med 14 jår verhüüsden see van öäre geboartesteade [[Reading (Pennsylvania)|Reading]] in den ståt [[Pennsylvanie]] når [[Nashville (Tennesee)|Nashville]] in [[Tennessee]] üm name te maken in de [[Country|countrymusik]]. See kreag al rap een platenkontrakt med [[Big Machine Records]] en was dårmed de jungste artiste under [[Sony/ATV Music Publishing|Sony/ATV Music publishing house]]. Öär eyrste album [[Taylor Swift (album)|''Taylor Swift'']] was de längstnoteerde in de jåren 2000 in Amerika, med as höygste steade vyvde in de lyste. Et nummer ''Our Song'' makeden öär de jungste ooit dee et presteerden üm selv een nummer te skryven en uutvoren en dårmed in de hitlyste ''Hot Country Songs'' te koamen. Swifts tweyde album, ''Fearless'', küm uut in [[2008]]. Med de hitnummers ''Love Story'' en ''You Belong With Me'' was Fearless et bestverkochte album van 2009 in de VS. Et album kreag veer [[Grammy Award]]s. Swift wör dårmed de jungste Album van et Jår-winner.
+'''Taylor Alison Swift''' ([[13 december]] [[1989]]) is ne [[Vereynigde Ståten|amerikaanske]] sängeresse en leedkesskryvster. Öäre nummers gåt meysttyds oaver öär eygene leaven, wat öär vöäle mediaandacht upleyverden. Med 14 jår verhüüsden see van öäre geboartesteade [[Reading (Pennsylvania)|Reading]] in den ståt [[Pennsylvanie]] når [[Nashville (Tennesee)|Nashville]] in [[Tennessee]] üm name te maken in de [[Country|countrymusik]]. See kreag al rap een platenkontrakt med [[Big Machine Records]] en was dårmed de jungste artiste under [[Sony/ATV Music Publishing|Sony/ATV Music publishing house]]. Öär eyrste album [[Taylor Swift (album)|''Taylor Swift'']] was de längstnoteerde in de jåren 2000 in Amerika, med as höygste steade vyvde in de lyste. Et nummer ''Our Song'' makeden öär de jungste ooit dee et presteerden üm selv een nummer te skryven en uutvoren en dårmed in de hitlyste ''Hot Country Songs'' te koamen. Swifts tweyde album, ''Fearless'', küm uut in [[2008]]. Med de hitnummers ''Love Story'' en ''You Belong With Me'' was Fearless et bestverkochte album van 2009 in de VS. Et album kreag veer [[Grammy Award]]s. Swift wör dårmed de jungste Album van et Jår-winner. (In 2009)
 
 Swift skreav selv öär nye album ''Speak Now'', wat in 2010 up de höygste steade binnenküm in de VS. Et nummer ''Mean'' kreag twey Grammy Awards. Öär veerde album, ''Red'', köm uut in [[2012]]. Öär vyvde album, ''1989'', wat in [[2014]] uutküm, leyverden öär drey Grammys up. Dårmed wör Taylor Swift de eerste vrouwe en vyvde artist ooit dee twey mål de prys Album van et Jår wün. De nummers ''Shake It Off'', ''Blank Space'' en ''Bad Blood'' wörden nummer-eynhits in de VS, [[Australie]] en [[Kanada]]. Med de eyrste tweye wör Swift de eyrste vrouwe in de ''Billboard'' Hot 100 dee sikselv oaversteyg. Öär sesde album, ''Reputation'' (2017), en et höyvdnummer Look What You Made Me Do stünd boavenan in de VS en et [[Vereynigd Köäningriek|VK]]. Med de uutgave van ''Reputation'' wör Swift de eyrste artist wårvan veer albums binnen ne weake een miljoon mål wör verkocht. Twey nummers van ''Lover'', öär söävende album uut [[2019]], haalden nummer twey in de hitlysten: ''Me!'' en ''You Need to Calm Down''.
 
