*Empty MediaWiki Message*

--- a/Peter_Kropotkin.mw
+++ b/Peter_Kropotkin.mw
@@ -1,4 +1,4 @@
-[[Bestaand:Kropotkin Nadar.jpg|thumb|Peter Kropotkin]]
+[[Bestaand:Atelier Nadar - Pierre Kropotkine.jpg|thumb|Peter Kropotkin]]
 [[Bestaand:Olsufyev House Dmitrov.jpg|thumb|'t Huus van Olsufjev in Dmitrov waor as Kropotkin tussen 1917 en 1921 woond hef.]]
 
 '''Pjotr Aleksejevitsj Kropotkin''' ([[Russisch|Russies]]: Пётр Алексеевич Кропоткин, Pëtr Alekseevitsj Kropotkin) ([[Moskou (stad)|Moskou]], [[9 december]] [[1842]] – [[Dmitrov]], [[8 febrewaori|8 februari]] [[1921]]) was 'n Russiese vorst, revolutionair en [[anarchist]]; theoreticus van 't anarchisme, geograaf en geoloog.
