--- a/Purmerend.mw
+++ b/Purmerend.mw
@@ -2,23 +2,23 @@
 naam = Purmerend |
 bestaandsnaam vlagge = Flag of Purmerend.svg |
 bestaandsnaam woapn = Gemeentewapenpurmerend.gif |
-lokatie = Dutch Municipality Purmerend 2006 |
+lokatie = Map - NL - Municipality code 0439 (2022) |
 proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
 heufdplaats = Purmerend |
-öppervlakte = 24,52 |
-öppervlakte laand = 23,87 |
-öppervlakte water = 0,65 |
-inwonners = 77.858|
-doatum inwonners = [[1 juli]] [[2006]] |
-dichtheid = 3.261 |
+öppervlakte = 96,63 |
+öppervlakte laand = 94,49 |
+öppervlakte water = 2,14 |
+inwonners = 92.000 |
+doatum inwonners = 2022 |
+dichtheid = 974 |
 breedtegroad = 52/30//N |
 lengtegroad = 4/58//E |
 verkeersoader = [[A7]] [[N235]] [[N244]] [[N247]] |
 netnummer = 0299 |
-postkode = 1440-1448, 1481AR |
-webstie = [http://www.purmerend.nl/ www.purmerend.nl] |
+postkode = 1440-1448, 1460-1464, 1481AR |
+webstie = [https://www.purmerend.nl/ www.purmerend.nl] |
 }}
-'''Purmerend''' is ne stad en gemeente in de regio [[Waterlaand]] in de Nederlandse previnsie [[Noord-Hollaand]] en hef ne oppervlakte van 24,52 km² waorvan 0,65 km² water. De gemeente Purmerend mek deel uut van de [[plusregio]] [[Stadsregio Amsterdam]]. De stad is veural eleefd bi-j forenzen. 
+'''Purmerend''' is ne stad en gemeente in de regio [[Waterlaand]] in de Nederlandse previnsie [[Noord-Hollaand]] en hef ne oppervlakte van 96,63 km² waorvan 2,14 km² water. De gemeente Purmerend mek deel uut van de [[plusregio]] [[Stadsregio Amsterdam]]. De stad is veural eleefd bi-j forenzen. 
 
 == Aandere darpen in de gemeente ==
 [[Darp]]en/[[Gehucht|gehuchten]]:
@@ -28,13 +28,13 @@ webstie = [http://www.purmerend.nl/ www.purmerend.nl] |
 == Geskiednis ==
 Purmerend is ontstaon naost en uut et vissersdarpjen Purmer, dat elaegen is op et laand tussen et Purmermeer, et Beemstermeer en et Wormermeer. Naodat nen stormvlood de bewonners had vort ejagd, wierd Purmerend esticht deur [[Willem Eggert]]. Hi-j mocht in [[1410]] van graaf Willem den Zesden een eigen kasteel bouwen; slot Purmersteijn. Purmerend kreg in 1434 [[stadsrechten]]. Et kasteel blef staon tot umstraeks [[1741]]; 't wierd of ebrokken umdat et te völle in verval was eraakt. De plaatse Purmer besteet nog altied en ligt teggen de stad an tussen de gemeente Purmerend, Waterlaand en Edam-Volendam.
 
-De stad is umgaeven deur polders, zoas den [[Purmer]], [[Beemster]] en Wiede Wormer. De stad wierd et marktecentrum van de umgaevink, maor et bevolkingsantal greujden langzaam. Pas nao [[1960]] is de bevolking egreujd van rundumme 10.000 naor 80.000 inwonners. De stad ligt gunsteg ten opzichte van [[Amsterdam]] waor völle inwonners, mangsmaol veurmaolege inwonners van Amsterdam, warkt en veur de vri-jetiedsbestaeding komt. 
+De stad is umgaeven deur polders, zoas den [[Purmer]], [[Beemster]] en Wiede Wormer. De stad wierd et marktecentrum van de umgaevink, maor et bevolkingsantal greujden langzaam. Pas nao [[1960]] is de bevolking egreujd van rundumme 10.000 naor 92.000 inwonners. De stad ligt gunsteg ten opzichte van [[Amsterdam]] waor völle inwonners, mangsmaol veurmaolege inwonners van Amsterdam, warkt en veur de vri-jetiedsbestaeding komt. 
 
 Purmerend was in 2003 verneumd tot Karmisstad van Nederlaand. Noast de karmisse is Purmerend veural bekend um heure [[veemarkt]]en en [[mart|markten]]. Noa völle veezeekten tussen 1995 en 2001 is de beesten- en schöäpemarkt vort egaone.
 
 [[Ofbeelding:Purmerend_winkelstroate.jpg|thumb|left|300px|Winkelstraote in Purmerend]]
 == Uutgoande verwiezingen ==
-* [http://www.purmerend.nl Webste van de gemeente]
+* [https://www.purmerend.nl Webste van de gemeente]
 * [http://www.plattegronden.nl/purmerend/ Plattegroond van Purmerend]
 
 {{Noord-Hollaand}}
