/* Aandere darpen in de gemeente */ +

--- a/Purmerend.mw
+++ b/Purmerend.mw
@@ -24,6 +24,10 @@ webstie = [https://www.purmerend.nl/ www.purmerend.nl] |
 [[Darp]]en/[[Gehucht|gehuchten]]:
 * [[Purmer]] (deals)
 * [[Purmerbuurte]] (darp maor ok [[buurtschop]])
+* [[Middenbeemster]]
+* [[Noordbeemster]]
+* [[Westbeemster]]
+* [[Zuidoostbeemster]]
 
 == Geskiednis ==
 Purmerend is ontstaon naost en uut et vissersdarpjen Purmer, dat elaegen is op et laand tussen et Purmermeer, et Beemstermeer en et Wormermeer. Naodat nen stormvlood de bewonners had vort ejagd, wierd Purmerend esticht deur [[Willem Eggert]]. Hi-j mocht in [[1410]] van graaf Willem den Zesden een eigen kasteel bouwen; slot Purmersteijn. Purmerend kreg in 1434 [[stadsrechten]]. Et kasteel blef staon tot umstraeks [[1741]]; 't wierd of ebrokken umdat et te völle in verval was eraakt. De plaatse Purmer besteet nog altied en ligt teggen de stad an tussen de gemeente Purmerend, Waterlaand en Edam-Volendam.
