--- a/Guinea-Bissau.mw
+++ b/Guinea-Bissau.mw
@@ -40,15 +40,15 @@
 |tel=+245
 }}
 
-'''Guinea-Bissau''' ([[Portugees|Portugeesk]]: ''Guiné-Bissau'', [[Pulaar|Fula]]: ''𞤘𞤭𞤲𞤫 𞤄𞤭𞤧𞤢𞥄𞤱𞤮 Gine-Bisaawo'', [[Mandinka]]: ߖߌߣߍ ߺ ߓߌߛߊߥߏ߫ ''Gine-Bisawo''), officiääl den '''Republik Guinea-Bissau''' (portugeesk: ''República da Guiné-Bissau'' [ʁɛˈpuβlikɐ ðɐ ɣiˈnɛ βiˈsaw]), is en land in [[West-Afrika|Westafrika]]. Up ne uppervlakde van 36.125 kilometer in et veerkant woanet der ungeväär 1.726.000 miljoon lüde. Et grenset an [[Senegal]] in et noorden en [[Guinea]] up et süüdousten.
+'''Guinea-Bissau''' ([[Portugees|portugeesk]]: ''Guiné-Bissau'', [[Pulaar|Fula]]: ''𞤘𞤭𞤲𞤫 𞤄𞤭𞤧𞤢𞥄𞤱𞤮 Gine-Bisaawo'', [[Mandinka]]: ߖߌߣߍ ߺ ߓߌߛߊߥߏ߫ ''Gine-Bisawo''), officieel den '''Republik Guinea-Bissau''' (portugeesk: ''República da Guiné-Bissau'' [ʁɛˈpuβlikɐ ðɐ ɣiˈnɛ βiˈsaw]), is en land in [[West-Afrika|Westafrika]]. Up ne uppervlakde van 36.125 kilometer in et veerkant woanet der ungeväär 1.726.000 miljoon lüde. Et grenset an [[Senegal]] in et noorden en [[Guinea]] up et süüdousten.
 
-Guinea-Bissau was ooit deyl van et köäningryk [[Kaabu]] en ouk et [[Maliryk]]. Deylen van dit köäningryk hölden stand töt de [[18e eeuw|18. eywe]], terwyl as andere deylen al seyd de [[16e eeuw|16. eywe]] under portugeesk bewind völlen. In de [[19e eeuw|19. eywe]] wör et koloniseerd as Portugeesk Guinea. In [[1973]] verklården et land sikselv unafhangelik, wat in [[1974]] aksepteerd wör döär Portugal. De höyvdstad, [[Bissau]], wör by de name by anetrökken üm verwarring med et vöärmålige Fransk-Guinea te vöärkummen.
+Guinea-Bissau was ooit deyl van et köäningryk [[Kaabu]] en ouk et [[Maliryk]]. Deylen van dit köäningryk hölden stand töt de [[18e eeuw|18. eywe]], terwyl as andere deylen al seyd de [[16e eeuw|16. eywe]] under portugeesk bewind völlen. In de [[19e eeuw|19. eywe]] wör et koloniseerd as Portugeesk-Guinea. In [[1973]] verklården et land sikselv unafhangelik, wat in [[1974]] aksepteerd wör döär Portugal. De höyvdstad, [[Bissau]], wör by de name by anetrökken üm verwarring med et vöärmålige Fransk-Guinea te vöärkummen.
 
 Seyd de unafhangelikheid steyt Guinea-Bissau bekend üm de wankele polityk. Mär eynen verköäsenen president ([[José Mário Vaz]]) hevt ne vulle ambtstyd van vyv jår vulemaked. Den hüdigen president, [[Umaro Sissoco Embaló]] is verköäsen up [[29 december|29. december]] [[2019]].
 
-De officiäle språke is portugeesk, al spreakt mär 2% van de lüde et as eyrste en 33% as tweyde språke. [[Guinea-bissausk Kreool]], baseerd up et portugeesk, is de verbindende språke in et land. Volgens en undersöök uut 2012 spreaket 54% van de bevolking et as eyrste en 40% as tweyde språke. De rest spreaket verskillende andere inheymske afrikaanske språken. En grout deyl van de inwoaners sint [[Islam|islamitisk]], dårnå kummet verskeidene natuurgodsdeenste. Et kristendom hevt sou'n 18% anhang. Et BBP van et land is eyne van de laegste van de wearld.
+De officiele språke is portugeesk, al spreakt mär 2% van de lüde et as eyrste en 33% as tweyde språke. [[Guinea-bissausk Kreool]], baseerd up et portugeesk, is de verbindende språke in et land. Volgens en undersöök uut 2012 spreaket 54% van de bevolking et as eyrste en 40% as tweyde språke. De rest spreaket verskillende andere inheymske afrikaanske språken. En grout deyl van de inwoaners sint [[Islam|islamitisk]], dårnå kummet verskeidene natuurgodsdeenste. Et kristendom hevt sou'n 18% anhang. Et BBP van et land is eyne van de laegste van de wearld.
 
-Guinea-Bissau is lid van de Vereynigde Natys, et Afrikaanske Verbund, de Ekonomiske Gemeynskap van Westafrikaanske Ståten, de Islamitiske Samenwarkingsband, et Portugeesk-spreakende Landgemeynskap, De Internationale Frankofone Samenwarking en de Süüdatlantiske Zone van Vreyde- en Samenwarking.
+Guinea-Bissau is lid van de Vereynigde Natys, et Afrikaanske Verbund, de Ekonomiske Gemeynskap van Westafrikaanske Ståten, de Islamitiske Samenwarkingsband, et Portugeesk-spreakende Landgemeynskap, De Internationale Frankofone Samenwarking en de Süüdatlantiske Zone van Vreade- en Samenwarking.
 
 [[Kategorie:Laand]]
 [[Kategorie:Afrika]]
