*Empty MediaWiki Message*

--- a/Humanae_Vitae.mw
+++ b/Humanae_Vitae.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Paulaudenece1977.jpg|thumb|200px|Paus Paulus VI, dee as de encycliek ''Humanae Vitae'' uutveerdigde]]
+[[Ofbeelding:Pape Paul VI – Vatican, 1968.jpg|thumb|200px|Paus Paulus VI, dee as de encycliek ''Humanae Vitae'' uutveerdigde]]
 '''Humanae Vitae''' ([[Latien]]: ''van mèènselijke lèven'', ok wel of-ekort as: ''HV'') is 'ne encycliek eskreven deur [[Paus Paulus VI]] op [[25 juli]] [[1968]]. De encliek hef de ondertitel ''over de regulering van de bevalling''. 't Stuk bevestigt de treditionele lere van de [[Rooms-Katholieke Karke|Rooms-Kattelieke Karke]] over [[abortus]], [[anticonceptie]]middels, en aandere zaken die te maken hebt mit 't mèènselijke lèven.
 
 Heufdzakelijk deur 't verbieden van kunstmaotige anticonceptiemiddels, in waffer vorm dan ok, blef de encycliek slim controversieel onder kattelieken. 't Document wördt mangs beskreven as profetisch, deur mèènsen die geleuven dät de vier veurspellings aover de gevolgen die anticonceptiemiddels veur de gemienskop zollen hebben, juust waren.
