--- a/Slot_Loevestein.mw
+++ b/Slot_Loevestein.mw
@@ -1,7 +1,7 @@
 [[Ofbeelding:Loevenstein 1.jpg|thumb|450px|Slot Loevestein 2007]]
 '''Slot Loevestein''' is n [[kasteel]], eleagen eaven ten noordwesten van et darp [[Poederoijen]], dat vult under de [[gemiente (bestuur)|gemeente]] [[Zaltbommel]], an et ende van den Schouwendiek in de [[uterweerd]]en van den [[Woal]] en den [[Af-edamde Moas|Af-edamden Moas]].
 
-==Geschiedenis ==
+==Geskiedenis==
 Loevestein is tussen 1358 en 1375 ebouwd deur [[Dirk Loef van Horne]], heer van [[Laand van Heusden en Altena|Altena]]. Tot 1397 bunt enkele delen nog wat hoger emaakt of veranderd. Et verrees op ne strategies eleagen laandtonge, op de plaatse woar de revieren den Moas en den Woal zich vereanegt tot den [[Boven-Merwede]]. Et wodden ebruukt um [[tolweg|tol]] te heffen. Moar umdat den umrengende groand, et Munnikenlaand, mangsmoal under water stoand, was et nooit n antrekkelek wonhuus veur edelleu. Zo hef ne markwoardege geskiedenis op Loevestein plaatse evonden.
 Tiedens de [[Hookse en Kabeljauwse twisten]] was Loevestein ne [[gevangenisse]] veur teggenstaanders van [[Jacoba van Beieren]]. Ok tiedens de Republiek was Loevestein ne stoatsgevangenisse:
 *[[Hugo de Groot]] zat hier vanof [[1619]] nen leavenslangen gevangenisstraf uut, tot hi-j in [[1621]] [[ontsnapping van Hugo de Groot|ontsnapten in ne bookenkiste]]. 
