*Empty MediaWiki Message*

--- a/Toki_pona.mw
+++ b/Toki_pona.mw
@@ -1,6 +1,6 @@
 {{Sproake
 | spraoke = toki pona
-| ofbeelding = [[File:Toki_pona.svg|100px]]
+| ofbeelding = Toki_pona.svg
 | sprekkers          = 1600<ref>[https://iso639-3.sil.org/sites/iso639-3/files/change_requests/2021/2021-043_tok.pdf 2021-043_tok.pdf]</ref>
 | skrift             = u.a. et [[Latains alfabet|latynsk alfabet]]
 | klassifikatie      = künstspråke
