*Empty MediaWiki Message*

--- a/Toki_pona.mw
+++ b/Toki_pona.mw
@@ -90,6 +90,6 @@ Bestaand:BodyTokiPona.jpg|Lichaamsdeylen in et toki pona
 * (nl) Dennis Rijnvis, [https://web.archive.org/web/20121210231749/http://www.futurologisch.nl/?p=38 Toki pona: de nye wearldspråke?]. Futurologisch.nl, 16 augustus 2017 (archiveerd)
 * (tok) [https://liputenpo.org/ ''lipu tenpo''], måndeliks tydskrivt in et toki pona
 
-{{Dialekt|wvel}}
+{{Dialekt|wvel||Nysassiske Skryvwyse}}
 
 [[Kategorie:Kunsttaol]]
