--- a/Toki_pona.mw
+++ b/Toki_pona.mw
@@ -7,7 +7,7 @@
 | iso3               = tok}}
 '''Toki pona''' is en [[künstspråke]] dee untwikkeld is döär de [[Kannede|kanadeeske]] språkkündige [[Sonja Lang]], en is in de summer van [[2001]] binnennets üütegeaven.
 
-Toki pona is en minimalistiske (en volgens summige språkkündigen [[oligosyntetiske språke|oligosyntetiske]]) språke, dee as dool hevt en sou'n rüüm möägelike beteykenisse üüt te drukken mid en betöände woordvöärråd, en is richt sik up wat Lang seet as "de gode dingen van et leaven". De språke besteyt dan ouk enkeld üüt 14 [[foneem|fonemen]] en 137 woorden. De språke is üütedocht as en geystelike ovening in de geyst van et [[dauisme]]. Döärdat et en språke is dee et denken van de gebrüker solde beinvlöden, kan et eseen wörden as en proovgeval van de [[Sapir-Whorf-hypotese]]. Toki pona löt oavereynkumsten seen mid [[Newspeak]], en språke dee en rolle spöält in et book [[1984 (boek)|1984]] van [[George Orwell]].
+Toki pona is en minimalistiske (en volgens summige språkkündigen [[oligosyntetiske språke|oligosyntetiske]]) språke, dee as dool hevt en sou'n rüüm möägelike beteykenisse üüt te drukken mid en betöände woordvöärråd, en is richt sik up wat Lang seet as "de gode dingen van et leaven". De språke besteyt dan ouk enkeld üüt 14 [[foneem|fonemen]] en 137 woorden. De språke is üütedocht as en geystelike ovening in de geyst van et [[daoisme]]. Döärdat et en språke is dee et denken van de gebrüker solde beinvlöden, kan et eseen wörden as en proovgeval van de [[Sapir-Whorf-hypotese]]. Toki pona löt oavereynkumsten seen mid [[Newspeak]], en språke dee en rolle spöält in et book [[1984 (boek)|1984]] van [[George Orwell]].
 
 De språke is lastig te kategoriseren. Lang selv klassificeert et as en "filosofiske språke" en "künstmåtige [[pidgin]]". Howel toki pona neet bedoold is as [[internationale hülpspråke]], hevt et toch en bült anhangers dee de språke as en brüükbår alternativ seen vöär de vöäle [[eurokloon|euroklonen]] dee mid mekaar üm vöärrang stryden.
 
