--- a/Lelystad.mw
+++ b/Lelystad.mw
@@ -3,11 +3,11 @@ naam = Lelystad |
 bestaansnaam vlagge = Flag of Lelystad.svg |
 bestaansnaam wapen =  WaopenLelystad.png |
 lokasie = LocatieLelystad |
-previnsie = [[Flevolaand]] |
+previnsie = [[Flevoland]] |
 heufplaose = '''Lelystad''' |  
 oppervlak = 765,45 |
 oppervlak laand = 231,54 |
-oppervlak waoter = 533,91 |
+oppervlak water = 533,91 |
 inwoeners = 78.169 |
 daotum inwoeners = 1 januari [[2020]] |
 dichtheid = 338 |
@@ -18,7 +18,7 @@ netnummer = 0320 |
 postcode = 8200-8249 |
 webstee = [http://www.lelystad.nl www.lelystad.nl] |
 }}
-'''Lelystad''' is de [[heufdstad]] van de [[Nederlaand]]se [[pervincie|provinsie]] [[Flevolaand]]. t Is esticht in [[1967]], en is sinds [[1980]] n gemeente. De stad had op [[1 januari]] [[2020]] 78.169 inwoeners<ref>CBS</ref>. Tot an de instelling van de provinsie Flevolaand op 9 jannewaori 1986 was Lelystad niet provinsiaal in-edeeld. De stad is verneumd naor [[Cornelis Lely]], old-Minister van Waoterstaot. 
+'''Lelystad''' is de [[heufdstad]] van de [[Nederlaand]]se [[pervincie|provinsie]] [[Flevolaand]]. t Is esticht in [[1967]], en is sinds [[1980]] n gemeente. De stad had op [[1 januari]] [[2020]] 78.169 inwoeners<ref>CBS</ref>. Tot an de instelling van de provinsie Flevolaand op 9 jannewaori 1986 was Lelystad niet provinsiaal in-edeeld. De stad is verneumd naor [[Cornelis Lely]], old-Minister van Waoterstaot.
 
 ==Geografie==
 Samen mit de gemeente [[Dronten]] en n klein stukkien van de gemeente [[Zeewolde]] vormp Lelystad de polder [[Oostelik Flevolaand]]. Disse polder maakt deel uut van de [[Zuderzeewarken]], t völ dreuge in 1957 en ligt 4,8 meter onder de zeespiegel. Lelystad is mit n totale [[oppervlakte]] van 765,45 km² de tweede grootste gemeente van Nederlaand. Hiervan is mar 234,54 km² laand, de rest is veural [[Iesselmeer]] en [[Markermeer]]. 
